v.dissolve: Fix typo and improve aggregation method description (#3429)

--- a/scripts/v.dissolve/v.dissolve.html
+++ b/scripts/v.dissolve/v.dissolve.html
@@ -69,11 +69,11 @@ For scripting and other automated usage, specifying the backend explicitly
 is strongly recommended.
 
 <p>
-For convince, certain methods, namely <em>n</em>, <em>count</em>,
-<em>mean</em>, and <em>avg</em>, are converted to the name appropriate
-for the selected backend. However, for scripting, specifying the appropriate
-method (function) name for the backend is recommended because the conversion
-is a heuristic which may change in the future.
+For convenience, certain methods, namely <em>n</em>, <em>count</em>,
+<em>mean</em>, and <em>avg</em>, are converted to the appropriate name 
+for the selected backend. However, for scripting, it is recommended to
+specify the appropriate method (function) name for the backend, as the 
+conversion is a heuristic that may change in the future.
 
 <p>
 If only <b>aggregate_columns</b> is provided, methods default to
